unpackaged/main/default/objects/Lead/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <externalId>true</externalId>
    <label>Batch Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>