unpackaged/main/default/objects/Lead/fields/delete_from_f9list_id__c.field-meta.xml
<CustomField>
    <fullName>delete_from_f9list_id__c</fullName>
    <label>delete_from_f9list_id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>