unpackaged/main/default/objects/Lead/fields/First_Contact_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Attempt_Date__c</fullName>
    <label>First Contact Attempt Date</label>
    <type>Date</type>
</CustomField>