unpackaged/main/default/objects/Lead/fields/Hot_Button__c.field-meta.xml
<CustomField>
    <fullName>Hot_Button__c</fullName>
    <label>Hot Button</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2nd Opinion</fullName>
            </value>
            <value>
                <fullName>Buy Property</fullName>
            </value>
            <value>
                <fullName>Clear record and move on</fullName>
            </value>
            <value>
                <fullName>Fear of IRS</fullName>
            </value>
            <value>
                <fullName>Garnishment/Levy</fullName>
            </value>
            <value>
                <fullName>Immigration Status</fullName>
            </value>
            <value>
                <fullName>Marriage/Divorce</fullName>
            </value>
            <value>
                <fullName>No Real Ether - Asked All Questions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Passport Restriction</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>