unpackaged/main/default/objects/Lead/fields/ITR_Id_formula__c.field-meta.xml
<CustomField>
    <fullName>ITR_Id_formula__c</fullName>
    <formula>TEXT( ITR_Id__c)</formula>
    <label>ITR ID</label>
    <type>Text</type>
</CustomField>