unpackaged/main/default/objects/Lead/fields/Last_Assign_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Assign_Date__c</fullName>
    <label>Last Assign Date</label>
    <type>DateTime</type>
</CustomField>