unpackaged/main/default/objects/Lead/fields/Last_Calendar_Event__c.field-meta.xml
<CustomField>
    <fullName>Last_Calendar_Event__c</fullName>
    <label>Last Calendar Event</label>
    <type>DateTime</type>
</CustomField>