unpackaged/main/default/objects/Lead/fields/Last_SMS_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_SMS_Received_Date__c</fullName>
    <label>Last SMS Received Date</label>
    <type>DateTime</type>
</CustomField>