unpackaged/main/default/objects/Lead/fields/Lead_Owned_by_Queue__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owned_by_Queue__c</fullName>
    <formula>IF(BEGINS(OwnerId,&#39;005&#39;) , False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owned by Queue?</label>
    <type>Checkbox</type>
</CustomField>