unpackaged/main/default/objects/Lead/fields/Lead_Source_Group__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Group__c</fullName>
    <label>Lead Source Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Real Time</fullName>
            </value>
            <value>
                <fullName>Calls</fullName>
            </value>
            <value>
                <fullName>Aged</fullName>
            </value>
            <value>
                <fullName>Age-SMS-Email</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Referral/Self Gen</fullName>
            </value>
            <value>
                <fullName>Email Campaigns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>