unpackaged/main/default/objects/Lead/fields/LiveVox__c.field-meta.xml
<CustomField>
    <fullName>LiveVox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True - Lead Uploaded to LiveVox
False - Lead is not created in LiveVox</description>
    <inlineHelpText>Is this lead on LiveVox?</inlineHelpText>
    <label>LiveVox</label>
    <type>Checkbox</type>
</CustomField>