unpackaged/main/default/objects/Lead/fields/Next_Calendar_Event__c.field-meta.xml
<CustomField>
    <fullName>Next_Calendar_Event__c</fullName>
    <formula>IF(
    Last_Calendar_Event__c &lt; NOW(),
    NULL,
    Last_Calendar_Event__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Calendar Event</label>
    <type>DateTime</type>
</CustomField>