unpackaged/main/default/objects/Lead/fields/Number_of_years_of_unfiled_returns__c.field-meta.xml
<CustomField>
    <fullName>Number_of_years_of_unfiled_returns__c</fullName>
    <label>Number of years of unfiled returns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>