unpackaged/main/default/objects/Lead/fields/Occupation_Category__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Category__c</fullName>
    <label>Occupation Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Occupation_Category</valueSetName>
    </valueSet>
</CustomField>