unpackaged/main/default/objects/Lead/fields/Replied__c.field-meta.xml
<CustomField>
    <fullName>Replied__c</fullName>
    <label>Replied?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>