unpackaged/main/default/objects/Lead/fields/Spouse_Gender__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Gender__c</fullName>
    <label>Spouse Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>