unpackaged/main/default/objects/Lead/fields/Spouse_Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Social_Security_Number__c</fullName>
    <label>Spouse Social Security Number</label>
    <length>10</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>