unpackaged/main/default/objects/Lead/fields/State_Conversion__c.field-meta.xml
<CustomField>
    <fullName>State_Conversion__c</fullName>
    <label>State Conversion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>