unpackaged/main/default/objects/Lead/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Attempting Contact</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>NICE</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Currently in IA or CNC</fullName>
            </value>
            <value>
                <fullName>Debt Too Low</fullName>
            </value>
            <value>
                <fullName>Phone Solicitations</fullName>
            </value>
            <value>
                <fullName>IRS Inquiry</fullName>
            </value>
            <value>
                <fullName>State Debt Only</fullName>
            </value>
            <value>
                <fullName>Child Support</fullName>
            </value>
            <value>
                <fullName>Tax Question</fullName>
            </value>
            <value>
                <fullName>Credit Card Debt</fullName>
            </value>
            <value>
                <fullName>Cant Help</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Bad or Wrong Number</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Student Loan</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>Bad or Wrong Number: After Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>