unpackaged/main/default/objects/Lead/fields/Tax_Problem__c.field-meta.xml
<CustomField>
    <fullName>Tax_Problem__c</fullName>
    <label>Tax Problem</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assets Seized</fullName>
            </value>
            <value>
                <fullName>Bank Account Levy</fullName>
            </value>
            <value>
                <fullName>Can&#39;t Pay Unpaid Taxes</fullName>
            </value>
            <value>
                <fullName>Innocent Spouse</fullName>
            </value>
            <value>
                <fullName>Lien Filed</fullName>
            </value>
            <value>
                <fullName>Received Audit Notice</fullName>
            </value>
            <value>
                <fullName>Unfiled Tax Returns</fullName>
            </value>
            <value>
                <fullName>Unpaid Penalties and Interest</fullName>
            </value>
            <value>
                <fullName>Wage Garnishment</fullName>
            </value>
            <value>
                <fullName>Wanting to start a business</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>