unpackaged/main/default/objects/Lead/fields/Velocify_Id__c.field-meta.xml
<CustomField>
    <fullName>Velocify_Id__c</fullName>
    <label>Velocify Id</label>
    <type>AutoNumber</type>
</CustomField>