unpackaged/main/default/objects/Lead/fields/Velocify_Id_Final__c.field-meta.xml
<CustomField>
    <fullName>Velocify_Id_Final__c</fullName>
    <inlineHelpText>Velocify ID after Data Migration Jan 2025</inlineHelpText>
    <label>Velocify Id Final</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>