unpackaged/main/default/objects/Lead/validationRules/Ensure_Missing_Tax_Years_Is_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Missing_Tax_Years_Is_Populated</fullName>
    <active>false</active>
    <description>Client must have at least one missing tax year.</description>
    <errorConditionFormula>PICKLISTCOUNT( Tax_Years_Missing__c ) = 0</errorConditionFormula>
    <errorMessage>Client must have at least one missing tax year.</errorMessage>
</ValidationRule>