unpackaged/main/default/objects/Lead/validationRules/Ensure_Tax_Debt_Is_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Tax_Debt_Is_Populated</fullName>
    <active>false</active>
    <description>The tax debt of a lead must be populated.</description>
    <errorConditionFormula>AND(
    ISBLANK(Total_Tax_Debt__c),
    $Profile.Name = &quot;ITR Dialer&quot;
)</errorConditionFormula>
    <errorMessage>The tax debt of a lead must be populated.</errorMessage>
</ValidationRule>