unpackaged/main/default/objects/Lead/validationRules/Lead_Status_Unqualified_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Status_Unqualified_Reason</fullName>
    <active>false</active>
    <description>Unqualified Reason Validation</description>
    <errorConditionFormula>ISPICKVAL(Status, &quot;Unqualified&quot;) &amp;&amp; ISPICKVAL(Unqualified_Reason__c, &quot;&quot;)</errorConditionFormula>
    <errorMessage>Missing the Unqualified Reason. Please add.</errorMessage>
</ValidationRule>