unpackaged/main/default/objects/Lead/listViews/Aged_CL_Form.listView-meta.xml
<ListView>
    <fullName>Aged_CL_Form</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>Time_Zone__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Aged CL Form</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified</value>
    </filters>
    <label>Aged CL Form</label>
    <sharedTo>
        <group>ITR_First_Trader</group>
    </sharedTo>
</ListView>