unpackaged/main/default/objects/Lead/listViews/Contacted_Leads.listView-meta.xml
<ListView>
    <fullName>Contacted_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Sub_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sub_Status__c</field>
        <operation>equals</operation>
        <value>Contacted</value>
    </filters>
    <filters>
        <field>LEAD.LAST_ACTIVITY</field>
        <operation>lessThan</operation>
        <value>12/21/2024</value>
    </filters>
    <label>Contacted Leads_No Action in 24hrs</label>
    <sharedTo>
        <group>ITR_First_Trader</group>
    </sharedTo>
</ListView>