unpackaged/main/default/objects/Lead/listViews/Dialers_Lead.listView-meta.xml
<ListView>
    <fullName>Dialers_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Dialers</label>
    <queue>Dialers</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>