unpackaged/main/default/objects/Lead/listViews/First_Traders_Lead.listView-meta.xml
<ListView>
    <fullName>First_Traders_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>First Traders</label>
    <queue>First_Traders</queue>
    <sharedTo>
        <group>ITR_First_Trader</group>
    </sharedTo>
</ListView>