unpackaged/main/default/objects/Lead/listViews/Real_Time_Leads_Before_1_1_2024.listView-meta.xml
<ListView>
    <fullName>Real_Time_Leads_Before_1_1_2024</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Website,1. Website Chat,1. Website Form,Blazeo,ChatBot Lead,Google LSA Web Calls</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>1/1/2024 12:00 AM</value>
    </filters>
    <label>Real Time Leads Before 1/1/2024</label>
    <sharedTo>
        <group>ITR_First_Trader</group>
    </sharedTo>
</ListView>