unpackaged/main/default/objects/Lead/listViews/Support_View_Marianny.listView-meta.xml
<ListView>
    <fullName>Support_View_Marianny</fullName>
    <columns>Velocify_Id__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Sub_Status__c</columns>
    <columns>Unqualified_Reason__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.CONVERTED</columns>
    <columns>Litigator__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Velocify_Id__c</field>
        <operation>greaterThan</operation>
        <value>6278070</value>
    </filters>
    <label>Support View_Marianny</label>
</ListView>